# cli-console-games

./: README.md  pyproject.toml  requirements._dev.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: ci.yml
src/: cli.py
tests/cli/: test_cli.py
