[metadata]
name = CLI Console Games
description = Run games on console
author = Carlos Daniel Gomes Santana
version = 0.1.0
license = GNU General Public License v3.0
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 :: 3.8
    Programming Language :: Python :: 3 :: 3.9
    Programming Language :: Python :: 3 :: 3.10
    Programming Language :: Python :: 3 :: 3.11

[options]
install_requires =
    click==8.1.3
python_requires = 
    >=3.8
package_dir = 
    =src
zip_safe = no

[options.entry_points]
console_scripts =
    cli-console-games = cli:app
